Fixed compilation errors, now gets ASP.NET_SessionId from /XmlHttp/SessionLessApi.aspx

--- a/itsLib/itsLib.csproj
+++ b/itsLib/itsLib.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bulletin.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="KeepAlive.cs">
       <SubType>Component</SubType>
