--- a/itsLib/Properties/Settings.settings
+++ b/itsLib/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="UA_String" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Sundhaug Connector System</Value>
+      <Value Profile="(Default)">External API from https://github.com/sundhaug92/itsCon</Value>
     </Setting>
     <Setting Name="Domain" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https://www.itslearning.com</Value>
