--- a/itsLib/itsLib.csproj
+++ b/itsLib/itsLib.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Messaging\Mail.cs" />
     <Compile Include="Messaging\MailBox.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -75,7 +76,9 @@
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
