Implemented basic course code

--- a/itsLib/itsLib.csproj
+++ b/itsLib/itsLib.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bulletin.cs" />
+    <Compile Include="Course.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="KeepAlive.cs">
       <SubType>Component</SubType>
