--- a/itsLib/itsLib.csproj
+++ b/itsLib/itsLib.csproj
@@ -74,7 +74,7 @@
     </Compile>
     <Compile Include="Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Person.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
