Switched to custom membership provider

--- a/webApp/webApp.csproj
+++ b/webApp/webApp.csproj
@@ -206,6 +206,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\itsLibMembershipProvider\itsLibMembershipProvider.csproj">
+      <Project>{532d23b0-b567-4a3c-8cea-99a44edf2dcb}</Project>
+      <Name>itsLibMembershipProvider</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
