--- a/webApp/Web.config
+++ b/webApp/Web.config
@@ -14,16 +14,17 @@
     <pages controlRenderingCompatibilityVersion="4.5" />
     <machineKey compatibilityMode="Framework45" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
+      <forms loginUrl="~/Account/Login.aspx" timeout="2880" slidingExpiration="true"  />
     </authentication>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
+    <membership defaultProvider="itsCustomMembershipProvider">
       <providers>
         <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <add name="itsCustomMembershipProvider" type="itsLibMembershipProvider.itsMembershipProvider, itsLibMembershipProvider"/>
       </providers>
     </membership>
     <roleManager defaultProvider="DefaultRoleProvider">
