Require login in webApp

--- a/webApp/Web.config
+++ b/webApp/Web.config
@@ -14,8 +14,11 @@
     <pages controlRenderingCompatibilityVersion="4.5" />
     <machineKey compatibilityMode="Framework45" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880" slidingExpiration="true"  />
+      <forms loginUrl="~/Account/Login.aspx" timeout="2880" slidingExpiration="true" />
     </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
