--- a/Xporter/packages.config
+++ b/Xporter/packages.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="1.6.4" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+  <package id="Microsoft.WebSockets" version="0.2.1" />
+  <package id="Newtonsoft.Json" version="4.5.5" />
+  <package id="SignalR" version="0.5.0" />
+  <package id="SignalR.Hosting.AspNet" version="0.5.0" />
+  <package id="SignalR.Hosting.Common" version="0.5.0" />
+  <package id="SignalR.Js" version="0.5.0" />
+  <package id="SignalR.Server" version="0.5.0" />
+  <package id="SignalR.WebSockets" version="0.3.3" />
   <package id="System.Web.Providers.Core" version="1.0" />
   <package id="System.Web.Providers.LocalDb" version="1.0" />
 </packages>
