Implemented Session.Create .setCustomer and .getCustomer for Xporter

--- a/Xporter/Xporter.csproj
+++ b/Xporter/Xporter.csproj
@@ -91,7 +91,7 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ConnectionManager.svc" />
+    <Content Include="Session.svc" />
     <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
@@ -100,8 +100,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionManager.svc.cs">
-      <DependentUpon>ConnectionManager.svc</DependentUpon>
+    <Compile Include="Session.svc.cs">
+      <DependentUpon>Session.svc</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -131,6 +131,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\itsLib\itsLib.csproj">
+      <Project>{c310486f-c87d-4418-80fa-1ce65ba36045}</Project>
+      <Name>itsLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
