Created Xporter/Customer.svc, for Customer information

--- a/Xporter/Web.config
+++ b/Xporter/Web.config
@@ -47,6 +47,9 @@
         <behavior name="Xporter.ConnectionManagerAspNetAjaxBehavior">
           <enableWebScript />
         </behavior>
+        <behavior name="Xporter.CustomerAspNetAjaxBehavior">
+          <enableWebScript />
+        </behavior>
       </endpointBehaviors>
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
@@ -55,6 +58,10 @@
       <service name="Xporter.ConnectionManager">
         <endpoint address="" behaviorConfiguration="Xporter.ConnectionManagerAspNetAjaxBehavior"
           binding="webHttpBinding" contract="Xporter.ConnectionManager" />
+      </service>
+      <service name="Xporter.Customer">
+        <endpoint address="" behaviorConfiguration="Xporter.CustomerAspNetAjaxBehavior"
+          binding="webHttpBinding" contract="Xporter.Customer" />
       </service>
     </services>
   </system.serviceModel>
