--- a/Xporter/Xporter.csproj
+++ b/Xporter/Xporter.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Customer.svc" />
     <Content Include="Session.svc" />
     <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
@@ -100,6 +101,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.svc.cs">
+      <DependentUpon>Customer.svc</DependentUpon>
+    </Compile>
     <Compile Include="Session.svc.cs">
       <DependentUpon>Session.svc</DependentUpon>
     </Compile>
