Removed SignalR, switched to true forms authentification

--- a/webApp/webApp.csproj
+++ b/webApp/webApp.csproj
@@ -190,6 +190,19 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\itsLib\itsLib.csproj">
+      <Project>{c310486f-c87d-4418-80fa-1ce65ba36045}</Project>
+      <Name>itsLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Xporter\Xporter.csproj">
+      <Project>{4d0f0181-1ca2-42e1-9519-cb8bad40fc64}</Project>
+      <Name>Xporter</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
