Created Xporter.Person, fixed bugs in itsLib.Person, implemented /Person/Me.aspx

--- a/Xporter/Web.config
+++ b/Xporter/Web.config
@@ -50,6 +50,9 @@
         <behavior name="Xporter.CustomerAspNetAjaxBehavior">
           <enableWebScript />
         </behavior>
+        <behavior name="Xporter.PersonAspNetAjaxBehavior">
+          <enableWebScript />
+        </behavior>
       </endpointBehaviors>
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
@@ -62,6 +65,10 @@
       <service name="Xporter.Customer">
         <endpoint address="" behaviorConfiguration="Xporter.CustomerAspNetAjaxBehavior"
           binding="webHttpBinding" contract="Xporter.Customer" />
+      </service>
+      <service name="Xporter.Person">
+        <endpoint address="" behaviorConfiguration="Xporter.PersonAspNetAjaxBehavior"
+          binding="webHttpBinding" contract="Xporter.Person" />
       </service>
     </services>
   </system.serviceModel>
