Added error messages, added Persons to webApp

--- a/webApp/Web.config
+++ b/webApp/Web.config
@@ -40,6 +40,10 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </sessionState>
+
+    <customErrors allowNestedErrors="false" mode="On">
+      <error statusCode="404" redirect="~/Error/404.aspx"/>
+    </customErrors>
   </system.web>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-webApp-20120507095621;Integrated Security=True"
