--- a/itsLib/itsLib.csproj
+++ b/itsLib/itsLib.csproj
@@ -98,6 +98,9 @@
     <Folder Include="Exceptions\" />
     <Folder Include="Misc\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="HtmlAgilityPack.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
